fix captcha reload bug

--- a/branches/0.1/app/views/partials/_captcha.rhtml
+++ b/branches/0.1/app/views/partials/_captcha.rhtml
@@ -1,13 +1,15 @@
+<% reload ||= 0 -%>
 <div id=generated_captcha_image>
 <p><%= _("In case you were not an alian. Please keyin according the image")%>:</p>
-<%= link_to_remote "[reload]", :url => {:controller => :images, :action => :reload_code_image},
-  :update => "generated_captcha_image" %>
 <input id=captcha_code/>
+<%= link_to_remote "[reload#{("("+reload+")") if reload > 0}]", 
+  :url => {:controller => :images, :action => :reload_code_image,
+    :reload => reload }, :update => "generated_captcha_image" %>
 <% tooltip() do -%>
   it is a test~
 <% end -%>
 <br/>
-<img src="<%= url_for(:controller => :images,:action => "code_image") %>"/>
+<img src="<%= url_for(:controller => :images,:action => "code_image", :reload => reload) %>"/>
 </div>
 
 
