up/download area with counters done! with thkuo

--- a/branches/0.1/app/views/releases/uploadfiles.rhtml
+++ b/branches/0.1/app/views/releases/uploadfiles.rhtml
@@ -16,6 +16,10 @@
             :removefile_id => f.id
           }), :update => "uploadfiles_view"
         %>
+	<%= link_to '[download]', download_url(:project_name => @project.unixname, 
+					       :release_name => @release.name,
+					       :file_name => f.path )
+        %>
     <%end%>
     <br/>
   
