--- a/of/app/views/projects/roles_edit.rhtml
+++ b/of/app/views/projects/roles_edit.rhtml
@@ -4,16 +4,20 @@
 <fieldset>
 <legend>Role list</legend>
 <label>Select a role to edit.</label><br/>
-<% for role in @roles %>
-<%= link_to_remote( role.name, :update => "role_edit", :url => { :action => :role_edit, :id => @project.id, :role => role.id } ) %>
-<% end %>
-<div id="role_edit">
-<% form_tag :action => 'role_create', :id => @project do %>
-  <%= text_field_tag 'name', '' ,{:size => 20 } %> 
-  <%= submit_tag 'New' %>
-  <br/>
-<% end %>
+  
+<div id="roles_edit">
+  <% form_remote_tag :update => "roles_edit", :url => {:action => 'role_create', :id => @project} do  %>
+    <% for role in @roles %>
+    <%= link_to_remote( role.name, :update => "role_edit", :url => { :action => :role_edit, :id => @project.id, :role => role.id } ) %>
+    <% end %>
+    <br/>
+    <%= text_field_tag 'name', '' ,{:size => 20 } %> 
+    <%= submit_tag 'New' %>
+  <% end %>
+  <div id="role_edit">
+  </div>
 </div>
+
 </fieldset>
 
 <fieldset>
