--- a/of/app/views/projects/roles_edit.rhtml
+++ b/of/app/views/projects/roles_edit.rhtml
@@ -6,16 +6,7 @@
 <label>Select a role to edit.</label><br/>
   
 <div id="roles_edit">
-  <% form_remote_tag :update => "roles_edit", :url => {:action => 'role_create', :id => @project} do  %>
-    <% for role in @roles %>
-    <%= link_to_remote( role.name, :update => "role_edit", :url => { :action => :role_edit, :id => @project.id, :role => role.id } ) %>
-    <% end %>
-    <br/>
-    <%= text_field_tag 'name', '' ,{:size => 20 } %> 
-    <%= submit_tag 'New' %>
-  <% end %>
-  <div id="role_edit">
-  </div>
+<%= render :partial => "role_new" %>
 </div>
 
 </fieldset>
