--- a/of/app/views/partials/_project_menu.rhtml
+++ b/of/app/views/partials/_project_menu.rhtml
@@ -1,4 +1,3 @@
-<img src="<%= url_for(:controller => :images, :action => "image", :id => project.icon) %>"/>
 		<h3>專案功能</h3>
     <ul>
         <li>專案資訊</a>
@@ -27,9 +26,9 @@
             </ul>
         </li>
         <li>共同筆記</li>
-        <li>版本控制
+        <li><%= link_to _("Subversion"), :action => "viewvc", :id =>@project %>
             <ul>
-                <li>Subversion or CVS Browse </li>
+                <li><%= link_to _("ViewVC"), :action => "viewvc", :id =>@project %></li>
                 <li>Download Subversion or CVS</li>
             </ul>
         </li>
@@ -72,6 +71,6 @@
         <li>工作任務<br>
         </li>
         <li>服務</li>
-        <li>權限控管</li>
+        <li><%= link_to "權限控管", :action => "roles_edit", :id =>@project%></li>
     </ul>
     <%# end %>
