--- a/of/app/views/projects/viewvc.rhtml
+++ b/of/app/views/projects/viewvc.rhtml
@@ -1,2 +1,2 @@
 <%# render( :partial => "tabnav" ) %>
-<iframe name="<%= @project.unixname %>" id="viewvc" src="<%= @Path %>" frameborder="0" scrolling="auto" style="border:none; width:700px; height:150px;" />
+<iframe name="<%= @project.unixname %>" id="VCS" src="<%= @Path %>" frameborder="0" scrolling="auto" style="border:none; width:700px;" ></iframe>
