home page style

--- a/of/app/views/openfoundry/index.rhtml
+++ b/of/app/views/openfoundry/index.rhtml
@@ -1,35 +1,70 @@
+<div id="OFIntro">
+  <div id="Module">
+    <table>
+      <tr>
+        <td><a><img src="/images/of/banner_icon01.gif" /><br/>待辦事項</a></td>
+        <td><a><img src="/images/of/banner_icon02.gif" /><br/>共同筆記</a></td>
+        <td><a><img src="/images/of/banner_icon03.gif" /><br/>版本控制</a></td>
+      </tr>
+      <tr>
+        <td><a><img src="/images/of/banner_icon04.gif" /><br/>通信論壇</a></td>
+        <td><a><img src="/images/of/banner_icon05.gif" /><br/>專案管理</a></td>
+        <td><a><img src="/images/of/banner_icon06.gif" /><br/>網站代管</a></td>
+      </tr>
+    </table>
+
+  </div>
+  <h1>Welcome to OpenFoundry</h1>
+  <p>
+    自由軟體鑄造場專案開發平台（OpenFoundry）是一個讓軟體開發者與使用者 可以共同參與的網站，我們提供了包括待辦事項、版本控制、共同筆記、通 信論壇、專案管理與網站代管等功能，讓開發者可利用此平台發展與分享自 由軟體，一般使用者也可在此取得軟體並提供意見。
+  </p>
+</div>
 <div id="RightWidget">
-<%= render :partial => "news/listn", :locals => {:newsList => News.ProjectNews}%>
+  <div id="HomeRight">
+    <h3><img src="/images/of/icon06.gif" align="left" valign="middle" />下載排行</h3>
+    <ul>
+      <li>Create Animation Make a</li>
+      <li>TinyTux with Pho ... Make a</li>
+      <li>Buddy Make a porthole !</li>
+    </ul>
+    <h3><img src="/images/of/icon05.gif" align="left" />專案新聞<%#=link_to_remote( "<img src='http://publib.boulder.ibm.com/infocenter/tivihelp/v10r1/topic/com.ibm.ccmdb.doc/cmdb_user/images/icon_reload.gif' style='border:none;' border='0'></img>", :update => "home_news", :url => { :controller => 'news', :action => '_home_news' } ) %></h3>
+    <%= render :partial => "news/listn", :locals => {:newsList => News.ProjectNews}%>
+    <h3><img src="/images/of/icon05.gif" align="left" />專案目錄</h3>
+    <%= render :partial => "partials/category" %>
+  </div>
 </div>
 <div id="Home">
-  <%= render :partial => "partials/category" %>
+  <h3><img src="/images/of/main_icon01.gif" align="left" />OpenFoundry 新聞
+    <%#=link_to_remote( "更新", :update => "home_news", :url => { :controller => 'news', :action => '_home_news' } ) %>
+  </h3>
 	<%= render :partial => "news/home_news", :locals =>{:newsList => News.home_news} %>
-<script>
-	//new Ajax.Updater('home_news', '/news/_home_news', {method: 'get'});
-</script>
-  <br/>
-  <h1>OpenFoundry 0.1</h1>
-  <pre>
-  * OpenFoundry 0.1 (frontend / sympa / kwiki)
-  ** Ruby on Rails
-  ** MySQL
-  ** 0.1 features
-  *** 可 Project / User / Relationship 的 CRUD
-  *** 原 foundry data migration
-  *** 支援 sympa / kwiki
-  *** 不考慮美工
-  *** 採 utf-8, 支援繁體中文與英文 
-  </pre>
-  <pre>
-  * OpenFoundry 0.2 (2007/06/18)
-  ** 0.2 features
-  *** CVS / Subversion
-  *** Search (不含子系統)
-  **** 全文檢索
-  **** 分類搜尋
-  *** Tagging
-  **** Tag Cloud
-  **** Tags 搜尋
-  </pre>
-  Subversion: http://svn.openfoundry.org/openfoundry/
+  <h3><img src="/images/of/main_icon02.gif" align="left" />專案介紹</h3>
+  
+  <h3><img src="/images/of/main_icon02.gif" align="left" />釋出資訊</h3>
+  <div>
+   <h4>OpenFoundry 0.1</h4>
+    <pre>
+    * OpenFoundry 0.1 (frontend / sympa / kwiki)
+    ** Ruby on Rails
+    ** MySQL
+    ** 0.1 features
+    *** 可 Project / User / Relationship 的 CRUD
+    *** 原 foundry data migration
+    *** 支援 sympa / kwiki
+    *** 不考慮美工
+    *** 採 utf-8, 支援繁體中文與英文 
+    </pre>
+    <pre>
+    * OpenFoundry 0.2 (2007/06/18)
+    ** 0.2 features
+    *** CVS / Subversion
+    *** Search (不含子系統)
+    **** 全文檢索
+    **** 分類搜尋
+    *** Tagging
+    **** Tag Cloud
+    **** Tags 搜尋
+    </pre>
+    Subversion: http://svn.openfoundry.org/openfoundry/
+  </div>
 </div>
