--- a/trunk/of/public/stylesheets/header.css
+++ b/trunk/of/public/stylesheets/header.css
@@ -20,42 +20,37 @@
 	position: absolute;
 	right:0px;
 	width:541px;
-        height:96px;
+  height:96px;
 	top:0px;
-        background: url(../images/of/top_bg02.gif) no-repeat;
+  background: url(../images/of/top_bg02.gif) no-repeat;
 	z-index:0;
 }
 
-#header #search {
-	float: right;
-}
-
-#header #search {
+#header #header-toolbar {
+  z-index:3;
 	position: absolute;
-	right:0px;
-	width:150px;
+  top:5px;
+	right:5px;
 	height:25px;
-	top:5px;
-	z-index:10000;
 	overflow: hidden;
 }
 
-#header #top {
-	z-index: 2;
-	height: 60px;
-	padding-top: 40px;
+#header #search {
+	z-index:2;
+  position:absolute;
+  top:50px;
+	right:50px;
 	overflow: hidden;
-/*	margin-left: 800px; */ 
-	margin-bottom: 10px;
-	margin-right: 10px;  
-	color: #999;
-	right: 0px;
-	position: absolute;
+}
+
+#header #search #query {
+  width:150px;
 }
 
 #header a {
 	background-color:transparent;
   text-decoration: none;
   border-bottom:none;
+  font-size:12px;
 }
 
