--- a/of/public/stylesheets/openfoundry.css
+++ b/of/public/stylesheets/openfoundry.css
@@ -9,7 +9,7 @@ h2 { font-size:18px; }
 h3 { font-size:16px; }
 h4 { font-size:14px; }
 h1, h2, h3, h4 { color:#31659C; margin:3px; }
-input[type="button"], input[type="submit"], input[type="reset"] { color:#31659C; background-color:#C6D3F7; }
+/*input[type="button"], input[type="submit"], input[type="reset"] { color:#31659C; background-color:#C6D3F7; }*/
 label { font-weight:bold; }
 fieldset { border:solid 2px #DEE7FF; }
 fieldset legend { font-weight:bold; color:#4265DE; }
@@ -17,7 +17,8 @@ a { text-decoration: none; color:#0D356F; }
 a:hover { color: #577FE3; /*border-bottom: dotted 1px #333;*/ }
 textarea { height:100px; width:500px; }
 ul { margin:0; padding:0 5px 0 20px; list-style-position:outside; list-style:url(/images/of/icon_s01.gif); }
-
+.button { background:url(/images/of/button_bg01.gif) repeat-x; color:white; padding:0px; margin:0px; cursor:pointer; border:solid 1px white;}
+.button:hover { background-position:bottom; border:solid 1px white;}
 
 /* For Layout */
 body { 
