--- a/trunk/of/app/views/projects/role_edit.rhtml
+++ b/trunk/of/app/views/projects/role_edit.rhtml
@@ -1,8 +1,8 @@
 <h3><%= @role.name %></h3>
- 
-<% form_remote_tag :update => "roles_edit", :url => { :action => 'role_update', :id => @project } do %>
+<% if @role.name.upcase == "ADMIN" || @role.name.upcase =="MEMBER" %>
+<% form_remote_tag :update => 'roles_edit', :url => { :action => 'role_update', :id => @project } do %>
   <%= hidden_field_tag 'role', @role.id %>
-  <%= text_field_tag 'name', @role.name ,{:size => 20 } %> 
+  <%= text_field_tag 'name', @role.name, {:disabled => true, :size => 20 } %> 
   <ul>
   <% for function in @functions %>
   <li>
@@ -12,14 +12,27 @@
   </ul>
   
   <%= submit_tag 'Update' %>
-  <%= submit_tag 'Cancel' %>
+  <input type=reset value="Reset">
   <%= link_to_remote "Delete", :url => { :action => 'role_destroy', :id => @project, :role => @role }, :condition => "confirm('確定要刪除嗎?')" %>
   <div id="role_message"/>
   <br/>
 <% end %>
-
-
-
-
-
-
+<% else %>
+<% form_remote_tag :update => 'roles_edit', :url => { :action => 'role_update', :id => @project } do %>
+  <%= hidden_field_tag 'role', @role.id %>
+  <%= text_field_tag 'name', @role.name ,{:size => 20 } %> 
+  <ul>
+  <% for function in @functions %>
+  <li>
+    <%=check_box_tag "functions[#{function.id}]", function.id, @role_functions.member?(function) %>
+    <%=function.description%></li>
+  <% end %>
+  </ul>
+  
+  <%= submit_tag 'Update' %>
+  <input type=reset value="Reset">
+  <%= link_to_remote "Delete", :url => { :action => 'role_destroy', :id => @project, :role => @role }, :condition => "confirm('確定要刪除嗎?')" %>
+  <div id="role_message"/>
+  <br/>
+<% end %>
+<% end %>
