--- a/trunk/of/app/views/user/login.rhtml
+++ b/trunk/of/app/views/user/login.rhtml
@@ -1,17 +1,37 @@
-<div title="Login Form" class="form">
-  <h1><%= _("Login to OpenFoundry") %></h1>
-  <%#= show_flash %>
-  <div class="form-padding">
-    <% form_tag '/user/login' do -%>
-      <label for="user_login"><%= _("Login ID") %>:</label><%= text_field("user", "login", :size => 30) %> 
-      <label for="user_password"><%= _("Password") %>:</label><%= password_field("user", "password", :size => 30) %> 
+<h1><%= _("Login to OpenFoundry") %></h1>
+<table id="LoginForm" class="form-table" title="Login Form" summary="Login Form" >
+  <% form_tag '/user/login' do -%>
+  <tr>
+    <th>
+      <label for="user_login"><%= _("Login ID") %>:</label>
+    </th>
+    <td>
+      <%= text_field("user", "login", :size => 30) %> 
+    </td>
+  </tr>
+  <tr>
+    <th>
+      <label for="user_password"><%= _("Password") %>:</label>
+    </th>
+    <td>
+      <%= password_field("user", "password", :size => 30) %> 
+    </td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>
       <label for="rememberme"><%= _("Remember me on this computer") %>:</label><%= check_box_tag("remember_me") %> 
-      <div class="button-bar">
-        <%= submit_tag _("Login") %>
-        <%= link_to _('Register for an account'), :action => 'signup' %> |
-        <%= link_to _('Forgot my password'), :action => 'forgot_password' %>
-      </div>
-    <% end -%>
-  </div>
-</div>
+    </td>
+  </tr>
+  <tr>
+    <th>
+    </th>
+    <td>
+      <%= submit_tag _("Login") %>
+      <%= link_to _('Register for an account'), :action => 'signup' %> |
+      <%= link_to _('Forgot my password'), :action => 'forgot_password' %>
+    </td>
+  </tr>
+  <% end -%>
+</table>
                                                                                 
